--- a/package.json
+++ b/package.json
@@ -58,12 +58,15 @@
     "@adonisjs/drive": "^3.4.1",
     "@adonisjs/i18n": "^2.2.2",
     "@adonisjs/lucid": "^21.6.1",
+    "@adonisjs/session": "^7.5.1",
     "@adonisjs/static": "^1.1.1",
     "@vinejs/vine": "^3.0.1",
     "adonis-autoswagger": "^3.73.0",
+    "adonisjs-scheduler": "^2.6.1",
     "axios": "^1.12.2",
     "date-fns": "^4.1.0",
     "decimal.js": "^10.6.0",
+    "edge.js": "^6.3.0",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^3.7.2",
     "mysql2": "^3.15.1",
